@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.34, Pod::Parser v1.14
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,15 +129,14 @@
 .\" ========================================================================
 .\"
 .IX Title "NNRPD 8"
-.TH NNRPD 8 "2004-12-19" "INN 2.5.0" "InterNetNews Documentation"
+.TH NNRPD 8 "2005-04-11" "INN 2.5.0" "InterNetNews Documentation"
 .SH "NAME"
 nnrpd \- NNTP server for reader clients
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
 \&\fBnnrpd\fR [\fB\-DfnoRSt\fR] [\fB\-6\fR \fIaddress\fR] [\fB\-b\fR \fIaddress\fR]
-[\fB\-c\fR \fIconfigfile\fR] [\fB\-g\fR\ \fIshadowgroup\fR] [\fB\-i\fR \fIinitial\fR]
-[\fB\-I\fR \fIinstance\fR] [\fB\-p\fR \fIport\fR] [\fB\-P\fR \fIprefork\fR] [\fB\-r\fR \fIreason\fR]
-[\fB\-s\fR \fIpadding\fR]
+[\fB\-c\fR \fIconfigfile\fR] [\fB\-i\fR\ \fIinitial\fR] [\fB\-I\fR \fIinstance\fR]
+[\fB\-p\fR \fIport\fR] [\fB\-P\fR \fIprefork\fR] [\fB\-r\fR \fIreason\fR] [\fB\-s\fR \fIpadding\fR]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBnnrpd\fR is an \s-1NNTP\s0 server for newsreaders.  It accepts commands on its
@@ -213,17 +212,6 @@ the \fIpathrun\fR directory.  The file will be named \fInnrpd\-%d.pid\fR, where
 .IX Item "-f"
 If specified, \fBnnrpd\fR does not detach itself and runs in the
 foreground when started as a standalone daemon using the \fB\-D\fR flag.
-.IP "\fB\-g\fR \fIshadowgroup\fR" 4
-.IX Item "-g shadowgroup"
-On systems that have a shadow password file, \fBnnrpd\fR tries to add the
-group \fIshadow\fR as a supplementary group if it is running in
-standalone mode. On many systems, members of that group have read
-permission for the shadow password file. The \fB\-g\fR parameter instructs
-\&\fBnnrpd\fR to try to add the named group as a supplementary group on
-shadow systems instead of \fIshadow\fR. This only works if
-\&\f(CW\*(C`HAVE_GETSPNAM\*(C'\fR in \fIinclude/config.h\fR is defined and \fBnnrpd\fR is
-running in standalone mode since this call only works when \fBnnrpd\fR is
-started as root.
 .IP "\fB\-i\fR \fIinitial\fR" 4
 .IX Item "-i initial"
 Specify an initial command to \fBnnrpd\fR. When used, \fIinitial\fR is taken
@@ -298,8 +286,8 @@ the default path by running \f(CW\*(C`make cert\*(C'\fR after \f(CW\*(C`make ins
 installing \s-1INN\s0, or by running the following commands:
 .PP
 .Vb 6
-\&    openssl req -new -x509 -nodes -out /usr/local/news/lib/cert.pem \e
-\&        -days 366 -keyout /usr/local/news/lib/key.pem
+\&    openssl req \-new \-x509 \-nodes \-out /usr/local/news/lib/cert.pem \e
+\&        \-days 366 \-keyout /usr/local/news/lib/key.pem
 \&    chown news:news /usr/local/news/lib/cert.pem
 \&    chmod 640 /usr/local/news/lib/cert.pem
 \&    chown news:news /usr/local/news/lib/key.pem
@@ -322,7 +310,7 @@ done with the \fB\-D\fR flag (and \f(CW\*(C`\-P 563\*(C'\fR), but the easiest wa
 to add a line like:
 .PP
 .Vb 1
-\&    nntps stream tcp nowait news /usr/lib/news/bin/nnrpd nnrpd -S
+\&    nntps stream tcp nowait news /usr/lib/news/bin/nnrpd nnrpd \-S
 .Ve
 .PP
 to \fI/etc/inetd.conf\fR or the equivalent on your system and let \fBinetd\fR
